Fixes new group page layout issues

--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -128,7 +128,6 @@
 }
 
 .group-input-name {
-  background: $white 0% 0% no-repeat padding-box;
   border: 1px solid $green;
   border-radius: 0;
 }
